--- a/.github/workflows/deploy-ftp.yml
+++ b/.github/workflows/deploy-ftp.yml
@@ -3,29 +3,33 @@ name: Deploy Guiziweb to FTP
 on:
   push:
     branches:
-      - main  # Déploiement uniquement si "main" est mis à jour
+      - main  # Déploiement uniquement lors d'un push vers "main"
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Setup Ruby and Jekyll
-        run: |
-          sudo apt update && sudo apt install -y ruby-full build-essential
-          sudo gem install jekyll bundler
-          bundle install
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.1.3   
+          bundler-cache: true
+
+      - name: Install Dependencies
+        run: bundle install --jobs 4 --retry 3
 
       - name: Build Jekyll site
-        run: jekyll build -d _site
+        run: bundle exec jekyll build -d _site
 
       - name: Deploy via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
-          server: ${{ secrets.FTP_HOST }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: _site/
-          server-dir: public_html/
+          server: ${{ secrets.FTP_HOST }}       # Hôte FTP spécifié par les secrets
+          username: ${{ secrets.FTP_USERNAME }} # Nom d'utilisateur du serveur FTP
+          password: ${{ secrets.FTP_PASSWORD }} # Mot de passe du serveur FTP
+          local-dir: _site/                     # Répertoire local construit
+          server-dir: public_html/              # Répertoire distant sur le serveur
