--- a/.github/workflows/deploy-ftp.yml
+++ b/.github/workflows/deploy-ftp.yml
@@ -32,4 +32,11 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }} # Nom d'utilisateur du serveur FTP
           password: ${{ secrets.FTP_PASSWORD }} # Mot de passe du serveur FTP
           local-dir: _site/                     # Répertoire local construit
-          server-dir: public_html/              # Répertoire distant sur le serveur
+      - name: Deploy via FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        with:
+          server: ${{ secrets.FTP_HOST }}
+          username: ${{ secrets.FTP_USERNAME }} # Nom d'utilisateur du serveur FTP
+          password: ${{ secrets.FTP_PASSWORD }} # Mot de passe du serveur FTP
+          local-dir: _site/                     # Répertoire local généré par Jekyll
+          server-dir: /home/${{ secrets.FTP_USERNAME }}/domains/guiziweb.shop/public_html/
