Fix: Real GitHub Pages build simulation (#24)
* test: Break HTML structure to test build checks

- Remove DOCTYPE declaration
- Add syntax error in html tag
- Should trigger build failure and @developpeur-landing notification

* fix: Use real GitHub Pages build simulation for PR checks

- Replace custom HTML validation with actual GitHub Pages workflow
- Use configure-pages and upload-pages-artifact actions
- Test exact same process as production deployment
- Stops before actual deploy to avoid updating live site

---------

Co-authored-by: camilleislasse <camille.islasse@acseo-conseil.fr>

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -14,14 +14,24 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         
-      - name: Basic Build Test
+      - name: GitHub Pages Build Test
         run: |
-          echo "🔧 Test build basique..."
+          echo "🚀 Test de build GitHub Pages..."
           
-          # Juste vérifier qu'il n'y a pas d'erreur de syntaxe critique
-          # qui empêcherait le site de se charger
+          # Simuler ce que fait GitHub Pages : upload et déploiement
+          # On utilise la même action que le vrai déploiement
           
-          echo "✅ Aucune erreur critique détectée"
+      - name: Setup Pages (test)
+        uses: actions/configure-pages@v4
+        
+      - name: Upload artifact (test) 
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: '.'
+          
+      - name: Build Success Test
+        run: |
+          echo "✅ GitHub Pages build simulation réussie"
           
       - name: Build Success
         run: |
