--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         
+      - name: W3C HTML Validation
+        uses: Cyb3r-Jak3/html5-validator-action@v7.2.0
+        with:
+          root: ./
+          css: false
+          
       - name: GitHub Pages Build Test
         run: |
           echo "🚀 Test de build GitHub Pages..."
@@ -32,6 +38,7 @@ jobs:
       - name: Build Success Test
         run: |
           echo "✅ GitHub Pages build simulation réussie"
+          echo "✅ HTML W3C validé"
           
       - name: Build Success
         run: |
