--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -14,11 +14,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         
-      - name: W3C HTML Validation
-        uses: Cyb3r-Jak3/html5-validator-action@v7.2.0
+      - name: HTML5Validator
+        uses: Cyb3r-Jak3/html5validator-action@v7.2.0
         with:
           root: ./
-          css: false
           
       - name: GitHub Pages Build Test
         run: |
